--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!--
 		body {
 			font-family: Helvetica, Verdana, Arial, sans-serif;
-			background-color: white;
+			background-color: #67cbef;
 			color: black;
 			text-align: center;
 		}
@@ -116,7 +116,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>inclined</p>
+		<p class="header"><span>inclined game</span></p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
